add sessions info details

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/dharam-k/Cookies-Session-in-Node-Js#readme",
   "dependencies": {
     "cookie-parser": "^1.4.6",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-session": "^1.17.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
