--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   },
   "homepage": "https://github.com/dharam-k/Cookies-Session-in-Node-Js#readme",
   "dependencies": {
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "express-session": "^1.17.3"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.16"
+    "express-session": "^1.17.3",
+    "mongoose": "^6.4.0"
   }
 }
